opam-version: "1.2"
maintainer: "andy.ray@ujamjar.com"
authors: "andy.ray@ujamjar.com"
homepage: "https://github.com/ujamjar/hardcaml-bloop"
dev-repo: "https://github.com/ujamjar/hardcaml-bloop.git"
bug-reports: "https://github.com/ujamjar/hardcaml-bloop/issues"
build: [ ["jbuilder" "build" "-p" name "-j" jobs] ]
depends: [
  "ocamlfind" {build}
  "jbuilder" {build & >= "1.0+beta8"}
  "base-bytes"
  "astring"
  "hardcaml" { >= "1.2.0" & < "2.0.0" }
  "sattools"
  "bdd"
  "uchar"
  "uutf" { >= "1.0.0" }
  "gg"
  "vg"
]
available: [ ocaml-version >= "4.02.2" ]
name: "hardcaml-bloop"
version: "0.2.0"
license: "ISC"
